docs/0.18/_sources/modeling/gallery/temporal/plot_constant_temporal.rst.txt
.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_modeling_gallery_temporal_plot_constant_temporal.py>`     to download the full example code
    .. rst-class:: sphx-glr-example-title

    .. _sphx_glr_modeling_gallery_temporal_plot_constant_temporal.py:


.. _constant-temporal-model:

Constant Temporal Model
=======================

This model parametrises a constant time model.

.. math:: F(E) = k

Example plot
------------
Here is an example plot of the model:


.. code-block:: default


    from astropy import units as u
    from astropy.time import Time
    import matplotlib.pyplot as plt







YAML representation
-------------------
Here is an example YAML file using the model:


.. code-block:: default

    from gammapy.modeling.models import (
        ConstantTemporalModel,
        Models,
        PowerLawSpectralModel,
        SkyModel,
    )

    time_range = [Time.now(), Time.now() + 1 * u.d]
    constant_model = ConstantTemporalModel(const=1)
    constant_model.plot(time_range)
    plt.grid(which="both")


    model = SkyModel(
        spectral_model=PowerLawSpectralModel(),
        temporal_model=constant_model,
        name="constant-model",
    )
    models = Models([model])

    print(models.to_yaml())



.. image:: /modeling/gallery/temporal/images/sphx_glr_plot_constant_temporal_001.png
    :alt: plot constant temporal
    :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    components:
    -   name: constant-model
        type: SkyModel
        spectral:
            type: PowerLawSpectralModel
            parameters:
            -   name: index
                value: 2.0
            -   name: amplitude
                value: 1.0e-12
                unit: cm-2 s-1 TeV-1
            -   name: reference
                value: 1.0
                unit: TeV
                frozen: true
        temporal:
            type: ConstantTemporalModel
            parameters: []






.. _sphx_glr_download_modeling_gallery_temporal_plot_constant_temporal.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: plot_constant_temporal.py <plot_constant_temporal.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: plot_constant_temporal.ipynb <plot_constant_temporal.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
